--- a/JustBlog.WebApp/JustBlog.Web.csproj
+++ b/JustBlog.WebApp/JustBlog.Web.csproj
@@ -26,7 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\" />
+    <Folder Include="Areas\Admin\" />
+    <Folder Include="Areas\Blog\Models\" />
     <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
