--- a/JustBlog.Models/JustBlog.Models.csproj
+++ b/JustBlog.Models/JustBlog.Models.csproj
@@ -12,4 +12,8 @@
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.12" />
+  </ItemGroup>
+
 </Project>
